--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 28</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Idade:</strong> 28</li>
                   
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> wfilipeborges@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Disponível</li>
