--- a/index.html
+++ b/index.html
@@ -208,11 +208,10 @@
             <h3 class="resume-title">Resumo</h3>
             <div class="resume-item pb-0">
               <h4>Luiz Filipe Coutinho</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+              <p><em>Copyrighter e programador com 2+ anos de experencia desenvolvendo apps e textos centrados nos requirementos do usuário até nos menores detalhes, e tudo pontual com um alto nível de polimento.</em></p>
+              <ul>                
+                <li>+55 (27) 888-7891</li>
+                <li>wfilipeborges@gmail.com</li>
               </ul>
             </div>
 
