--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h3 class="resume-title">Resumo</h3>
             <div class="resume-item pb-0">
               <h4>Luiz Filipe Coutinho</h4>
-              <p><em>Copyrighter e programador com 2+ anos de experencia desenvolvendo apps e textos centrados nos requirementos do usuário até nos menores detalhes, e tudo pontual com um alto nível de polimento.</em></p>
+              <p><em>Copyrighter e programador com anos de experencia desenvolvendo apps e textos centrados nos requirementos do usuário até nos menores detalhes, e tudo pontual com um alto nível de polimento.</em></p>
               <ul>                
                 <li>+55 (27) 888-7891</li>
                 <li>wfilipeborges@gmail.com</li>
