--- a/index.html
+++ b/index.html
@@ -225,7 +225,12 @@
             <div class="resume-item">
               <h4>Jogos Digitais</h4>
               <h5>2015 - 2019</h5>
-              <p><em>Pontifícia Católica de São Paulo (PUC), SP</em></p>              
+              <p><em>Pontifícia Católica de São Paulo (PUC), SP</em></p> 
+              <ul>
+                <li>Experiência com as engines Unity e Unreal</li>               
+                <li>Meshes complexas em Blender</li>               
+                <li>Métodos de design baseado na psicologia</li>               
+              </ul>             
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
