--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Educação</h3>
             <div class="resume-item">
               <h4>Engenharia Mecânica</h4>
               <h5>2010 - 2014</h5>
